duniverse/menhirLib.20200211/test/static/bad/non-terminal-multiple-definitions.mly
%start<int> a
%%

%public b: {}

b: {}
