duniverse/menhirLib.20200211/test/static/bad/non-terminal-multiple-definitions.exp
File "non-terminal-multiple-definitions.mly", line 4, characters 8-9:
File "non-terminal-multiple-definitions.mly", line 6, characters 0-1:
Error: the nonterminal symbol b is multiply defined.
Only %public symbols can have split definitions.
